# openapi-model-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  pr-check.yml
src/: cli.rs  error.rs  generator.rs  lib.rs  main.rs  models.rs  parser.rs
